added functionality of encoding/decoding text from GUI, modification of file encoding / decoding functionality