@@ -2,8 +2,11 @@ package telekom;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.Arrays;
+import java.util.stream.Stream;
 
 import javafx.application.Platform;
 import javafx.fxml.FXML;
@@ -18,34 +21,70 @@ public class Controller {
     private TextArea reportArea;
 
     @FXML
-    public void openFile() throws IOException {
+    public File openFile(String info) throws IOException {
         final FileChooser fileChooser = new FileChooser();
-        fileChooser.setTitle("Wczytaj dane");
-        FileChooser.ExtensionFilter extFilter = new FileChooser.ExtensionFilter("Pliki tekstowe (*.txt)", "*.txt");
-        fileChooser.getExtensionFilters().add(extFilter);
+        fileChooser.setTitle(info);
         /*String path = "C:\\TELEKOM-Z1\\data.txt";
         inputFile = new File(path);*/
-        inputFile = fileChooser.showOpenDialog(new Stage());
-        reportArea.setText(Files.readString(Paths.get(inputFile.getPath())));
+        File getFile = fileChooser.showOpenDialog(new Stage());
+        return getFile;
+        //reportArea.setText(new String(Files.readAllBytes(Paths.get(inputFile.getPath()))));
     }
 
     @FXML
-    public void encodeData(){
+    public File saveFile(String info) throws IOException {
+        final FileChooser fileChooser = new FileChooser();
+        fileChooser.setTitle(info);
+        /*String path = "C:\\TELEKOM-Z1\\data.txt";
+        inputFile = new File(path);*/
+        FileChooser.ExtensionFilter extFilter = new FileChooser.ExtensionFilter("Wszystkie pliki (*.*)", "*.*");
+        fileChooser.getExtensionFilters().add(extFilter);
+        File saveFile = fileChooser.showSaveDialog(new Stage());
+        return saveFile;
+        //reportArea.setText(new String(Files.readAllBytes(Paths.get(inputFile.getPath()))));
+    }
+
+    @FXML
+    public void encodeFile(){
         try {
             MistakeDetector encoder = new MistakeDetector();
+            File inputFile = openFile("Wczytaj dane do kodowania");
+            File outputFile = saveFile("Zapisz zakodowane dane");
             FileChooser fileChooser = new FileChooser();
             fileChooser.setTitle("Zapisz dane");
 
             //Set extension filter for text files
-            FileChooser.ExtensionFilter extFilter = new FileChooser.ExtensionFilter("Pliki tekstowe (*.txt)", "*.txt");
-            fileChooser.getExtensionFilters().add(extFilter);
+            //FileChooser.ExtensionFilter extFilter = new FileChooser.ExtensionFilter("Pliki tekstowe (*.txt)", "*.txt");
+            //fileChooser.getExtensionFilters().add(extFilter);
 
-           // String path = "C:\\TELEKOM-Z1\\data_out.txt";
-            String path1 = "D:\\TELEKOM-Z1\\data_out_encoded.txt";
+            //String path = "C:\\TELEKOM-Z1\\data_out_encoded.txt";
+            //String path1 = "D:\\TELEKOM-Z1\\data_out_encoded.txt";
             //Show save file dialog
             //File encodedFile = fileChooser.showSaveDialog(new Stage());
-            File encodedFile = new File(path1);
-            reportArea.setText(encoder.encodeFile(inputFile,encodedFile).toString());
+            //File encodedFile = new File(path);
+            encoder.encodeFile(inputFile,outputFile);
+            alertInformation("Plik został zakodowany pomyślnie. \n"+ outputFile.getPath());
+
+        } catch (IOException e) {
+            alertHandling(e.getMessage());
+        }
+    }
+
+    @FXML
+    public void encodeText(){
+        MistakeDetector encoder = new MistakeDetector();
+        try {
+            reportArea.setText(encoder.encodeText(reportArea.getText()).toString());
+        } catch (IOException e) {
+            alertHandling(e.getMessage());
+        }
+    }
+
+    @FXML
+    public void decodeText(){
+        MistakeDetector decoder = new MistakeDetector();
+        try {
+            reportArea.setText(decoder.decodeText(reportArea.getText()).toString());
         } catch (IOException e) {
             alertHandling(e.getMessage());
         }
@@ -61,24 +100,37 @@ public class Controller {
         alert.showAndWait();
     }
 
+    @FXML
+    public void alertInformation(String alertInfo) {
+        Alert alert = new Alert(Alert.AlertType.INFORMATION);
+        alert.setTitle("Information Dialog");
+        alert.setHeaderText("Look, a Information Dialog");
+        alert.setContentText(alertInfo);
+
+        alert.showAndWait();
+    }
 
     @FXML
-    public void decodeData() {
+    public void decodeFile() {
         try {
-            MistakeDetector decoder = new MistakeDetector();
+            MistakeDetector encoder = new MistakeDetector();
+            File inputFile = openFile("Wczytaj dane do odkodowania");
+            File outputFile = saveFile("Zapisz odkodowane dane");
             FileChooser fileChooser = new FileChooser();
             fileChooser.setTitle("Zapisz dane");
 
             //Set extension filter for text files
-            FileChooser.ExtensionFilter extFilter = new FileChooser.ExtensionFilter("Pliki tekstowe (*.txt)", "*.txt");
-            fileChooser.getExtensionFilters().add(extFilter);
+            //FileChooser.ExtensionFilter extFilter = new FileChooser.ExtensionFilter("Pliki tekstowe (*.txt)", "*.txt");
+            //fileChooser.getExtensionFilters().add(extFilter);
 
-            // String path = "C:\\TELEKOM-Z1\\data_out.txt";
-            String path1 = "D:\\TELEKOM-Z1\\data_out_decoded.txt";
+            //String path = "C:\\TELEKOM-Z1\\data_out_encoded.txt";
+            //String path1 = "D:\\TELEKOM-Z1\\data_out_encoded.txt";
             //Show save file dialog
             //File encodedFile = fileChooser.showSaveDialog(new Stage());
-            File decodedFile = new File(path1);
-            reportArea.setText(decoder.decodeFile(inputFile,decodedFile).toString());
+            //File encodedFile = new File(path);
+            encoder.decodeFile(inputFile,outputFile);
+            alertInformation("Plik został odkodowany pomyślnie. \n"+ outputFile.getPath());
+
         } catch (IOException e) {
             alertHandling(e.getMessage());
         }
